media and users interaction to media
